finish media query for tablet

--- a/index.html
+++ b/index.html
@@ -10,12 +10,12 @@
   <body>
     <nav>
       <ul>
+        <li>Our Honey</li>
+        <li>Trace Honey</li>
         <li id="special-li">
           <img src="./assets/imgs/logo.png" alt="web-logo" />Shop
         </li>
-        <li>Our Honey</li>
         <li>Facilities</li>
-        <li>Trace Honey</li>
         <li>Contacts</li>
       </ul>
     </nav>
@@ -23,61 +23,62 @@
     <main>
       <section>
         <h1>Best Selling Products</h1>
-
-        <div class="card">
-          <img src="./assets/imgs/honey.jpg" alt="honey" />
-          <div>
-            <div class="card-p">
-              <h5>100% Bio Honey</h5>
-              <p>Italian, not treated</p>
+        <div class="container">
+          <div class="card">
+            <img src="./assets/imgs/honey.jpg" alt="honey" />
+            <div>
+              <div class="card-p">
+                <h5>100% Bio Honey</h5>
+                <p>Italian, not treated</p>
+              </div>
+              <p>7$/kg</p>
             </div>
-            <p>7$/kg</p>
+            <button>Add to cart</button>
           </div>
-          <button>Add to cart</button>
-        </div>
-        <div class="card">
-          <img src="./assets/imgs/honey.jpg" alt="honey" />
-          <div>
-            <div class="card-p">
-              <h5>100% Bio Honey</h5>
-              <p>Italian, not treated</p>
+          <div class="card">
+            <img src="./assets/imgs/honey.jpg" alt="honey" />
+            <div>
+              <div class="card-p">
+                <h5>100% Bio Honey</h5>
+                <p>Italian, not treated</p>
+              </div>
+              <p>7$/kg</p>
             </div>
-            <p>7$/kg</p>
+            <button>Add to cart</button>
           </div>
-          <button>Add to cart</button>
-        </div>
-        <div class="card">
-          <img src="./assets/imgs/honey.jpg" alt="honey" />
-          <div>
-            <div class="card-p">
-              <h5>100% Bio Honey</h5>
-              <p>Italian, not treated</p>
+          <div class="card">
+            <img src="./assets/imgs/honey.jpg" alt="honey" />
+            <div>
+              <div class="card-p">
+                <h5>100% Bio Honey</h5>
+                <p>Italian, not treated</p>
+              </div>
+              <p>7$/kg</p>
             </div>
-            <p>7$/kg</p>
+            <button>Add to cart</button>
           </div>
-          <button>Add to cart</button>
-        </div>
-        <div class="card">
-          <img src="./assets/imgs/honey.jpg" alt="honey" />
-          <div>
-            <div class="card-p">
-              <h5>100% Bio Honey</h5>
-              <p>Italian, not treated</p>
+          <div class="card">
+            <img src="./assets/imgs/honey.jpg" alt="honey" />
+            <div>
+              <div class="card-p">
+                <h5>100% Bio Honey</h5>
+                <p>Italian, not treated</p>
+              </div>
+              <p>7$/kg</p>
             </div>
-            <p>7$/kg</p>
+            <button>Add to cart</button>
           </div>
-          <button>Add to cart</button>
-        </div>
-        <div class="card">
-          <img src="./assets/imgs/honey.jpg" alt="honey" />
-          <div>
-            <div class="card-p">
-              <h5>100% Bio Honey</h5>
-              <p>Italian, not treated</p>
+          <div class="card">
+            <img src="./assets/imgs/honey.jpg" alt="honey" />
+            <div>
+              <div class="card-p">
+                <h5>100% Bio Honey</h5>
+                <p>Italian, not treated</p>
+              </div>
+              <p>7$/kg</p>
             </div>
-            <p>7$/kg</p>
+            <button>Add to cart</button>
           </div>
-          <button>Add to cart</button>
         </div>
       </section>
       <section>
@@ -88,7 +89,14 @@
             Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ex
             quibusdam ad labore perferendis obcaecati consequatur deserunt nemo
             dignissimos? Ea blanditiis saepe quae sequi excepturi mollitia
-            voluptatem. Illum accusamus nisi ducimus.
+            voluptatem. Illum accusamus nisi ducimus. Lorem ipsum dolor sit
+            amet, consectetur adipisicing elit. Consequatur sequi ut illo amet
+            doloribus eligendi. Reprehenderit, numquam. Nam pariatur doloribus
+            dolorum, eligendi ratione libero minima asperiores impedit
+            voluptates aspernatur illum! Lorem ipsum dolor sit amet consectetur
+            adipisicing elit. Iusto deleniti ea dolores maxime mollitia,
+            consequatur vero aperiam eius doloremque nesciunt accusantium. Sint
+            ipsa, aliquam voluptates nulla quae sed modi asperiores?
           </p>
           <img src="./assets/imgs/honey.jpg" alt="honey" />
         </article>
