add mobile media query and large medium

--- a/index.html
+++ b/index.html
@@ -8,18 +8,19 @@
     <link rel="stylesheet" href="./assets/style/style.css" />
   </head>
   <body>
-    <nav>
-      <ul>
-        <li>Our Honey</li>
-        <li>Trace Honey</li>
-        <li id="special-li">
-          <img src="./assets/imgs/logo.png" alt="web-logo" />Shop
-        </li>
-        <li>Facilities</li>
-        <li>Contacts</li>
-      </ul>
-    </nav>
-
+    <header>
+      <nav>
+        <ul>
+          <li>Our Honey</li>
+          <li>Trace Honey</li>
+          <li id="special-li">
+            <img src="./assets/imgs/logo.png" alt="web-logo" />Shop
+          </li>
+          <li>Facilities</li>
+          <li>Contacts</li>
+        </ul>
+      </nav>
+    </header>
     <main>
       <section>
         <h1>Best Selling Products</h1>
