add media query for large screen

--- a/index.html
+++ b/index.html
@@ -85,20 +85,23 @@
       <section>
         <h2>Latest News</h2>
         <article>
-          <h3>Our delicious honey</h3>
-          <p>
-            Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ex
-            quibusdam ad labore perferendis obcaecati consequatur deserunt nemo
-            dignissimos? Ea blanditiis saepe quae sequi excepturi mollitia
-            voluptatem. Illum accusamus nisi ducimus. Lorem ipsum dolor sit
-            amet, consectetur adipisicing elit. Consequatur sequi ut illo amet
-            doloribus eligendi. Reprehenderit, numquam. Nam pariatur doloribus
-            dolorum, eligendi ratione libero minima asperiores impedit
-            voluptates aspernatur illum! Lorem ipsum dolor sit amet consectetur
-            adipisicing elit. Iusto deleniti ea dolores maxime mollitia,
-            consequatur vero aperiam eius doloremque nesciunt accusantium. Sint
-            ipsa, aliquam voluptates nulla quae sed modi asperiores?
-          </p>
+          <div>
+            <h3>Our delicious honey</h3>
+            <p>
+              Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ex
+              quibusdam ad labore perferendis obcaecati consequatur deserunt
+              nemo dignissimos? Ea blanditiis saepe quae sequi excepturi
+              mollitia voluptatem. Illum accusamus nisi ducimus. Lorem ipsum
+              dolor sit amet, consectetur adipisicing elit. Consequatur sequi ut
+              illo amet doloribus eligendi. Reprehenderit, numquam. Nam pariatur
+              doloribus dolorum, eligendi ratione libero minima asperiores
+              impedit voluptates aspernatur illum! Lorem ipsum dolor sit amet
+              consectetur adipisicing elit. Iusto deleniti ea dolores maxime
+              mollitia, consequatur vero aperiam eius doloremque nesciunt
+              accusantium. Sint ipsa, aliquam voluptates nulla quae sed modi
+              asperiores?
+            </p>
+          </div>
           <img src="./assets/imgs/honey.jpg" alt="honey" />
         </article>
       </section>
